<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings"></string>
    <!-- Signs -->
    <string name="btnHistory">History</string>
    <string name="btnDel">del</string>
    <string name="btnEqual">=</string>
    <string name="btnDOT">.</string>
    <string name="btnMulti">*</string>
    <string name="btnDiv">/</string>
    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <!-- Numbers -->
    <string name="btnZero">0</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <!-- Scientific -->
    <string name="btnSine">sin(</string>
    <string name="btnCos">cos(</string>
    <string name="btnTan">tan(</string>
    <string name="btnLog">log(</string>
    <string name="btnSquare">^x</string>
    <string name="btnEndBrace">)</string>
    <!-- Preferences-->
    <string name="btnPrefRetrive">M+</string>
    <string name="btnPrefClear">MC</string>
    <string name="btnPrefRecord">MR</string>
    <!-- Activity Titile -->
    <string name="title_activity_second">Calculator|History</string>
</resources>
